# RUNECLAW

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  README.zh-TW.md  SECURITY.md  agent_card.json  api_bridge.py  backtest_audit.py  backtest_deep_results.json  backtest_realdata.py  dashboard_api.py  deploy.sh  docker-compose.yml  e2e_live_report.json  e2e_report.json  live_e2e_test.py  live_test.py  live_test_results.json  live_trade_proof.json  micro_trade_test.py  nginx.conf  output_analysis.json  pyproject.toml  requirements-ci.txt  run_deep_backtest.py  run_deep_backtest_full.py  run_realdata_backtest.py  verify.py  watchdog.sh
agentbench/: getclaw-runeclaw.ts
app/: auth.js  db.js  package-lock.json  package.json  proxy.js  server.js
bot/: __init__.py  _compat.py  compat.py  config.py  main.py  requirements.txt
config/: intent_policy.example.json  macro_calendar.seed.json  risk_manifest.yaml
dashboard_static/: index.html
demo/: backtest_results.json  sample_backtest_result.json  sample_output.json  sample_portfolio.json  sample_risk_check.json
docs/: AI_WEBSEARCH.md  ANDROID.md  AUDIT_REPORT_V4.md  AUDIT_REPORT_V5.md  AUDIT_REPORT_V6.1.md  AUDIT_REPORT_V6.md  AUDIT_REPORT_V7.md  AUDIT_REPORT_V8.md  BACKTEST_FULL_UNIVERSE.md  CASE_STUDY.md  CONFIDENCE_CALIBRATION.md  CORRELATION_SIZING.md  CROSS_CHAIN_REBALANCE_DESIGN.md  DEEP_AUDIT_2026.md  DOCUMENTATION_ARCHITECTURE.md  DURABILITY.md  ENTRY_TIMING_AB.md  EXECUTION_MAP.md  EXTERNAL_SENTIMENT.md  FEE_REDUCTION.md  FIRST_LIVE_USER_PREFLIGHT.md  FLAG_ACTIVATION.md  FROZEN_BENCHMARK.md  FUNDING_COST.md  HYPERLIQUID_INTEGRATION_DESIGN.md  IMPLEMENTATION_BLUEPRINT.md  IMPROVEMENT_ROADMAP.md  INTEROP.md  LIVE_HARDENING_RUNBOOK.md  LIVE_TESTING_READINESS.md  LIVE_TRADING_ENABLEMENT.md  MASTER_BUILD_PLAN.md  MCP.md  MULTI_USER_LIVE_SETUP.md  NEWS3_PERSONAL_INGEST.md  OKX_AI_MCP_INTEGRATION.md  ONCHAIN.md  ONCHAIN_GOLIVE.md  PER_USER_LIVE_READINESS.md  PER_USER_LIVE_ROLLOUT.md  (+44 more)
logs/: audit_chain.jsonl  closed_trades.json  live_trading_log.csv
ollama/: Modelfile  Modelfile.finetuned  RUNECLAW_Colab_Training.ipynb  RUNECLAW_Merge_Deploy.ipynb  RUNECLAW_Training_V2.ipynb  RUNECLAW_Training_V3.ipynb  RUNECLAW_Training_V4.ipynb  backtest_dashboard.html  backtest_data.py  backtest_engine.py  backtest_metrics.py  backtest_runner.py  convert_official.py  convert_to_gguf.py  create_ollama_direct.py  deploy_ollama.sh  export_model.py  finetune_runeclaw.ipynb  generate_claude_data.py  generate_opus_data.py  generate_training_data.py  generate_training_data_v2.py  generate_training_data_v3.py  generate_v4_training_data.py  keep_awake.py  merge_models.py  merge_opus_claude.py  merge_training_data.py  runeclaw_eval.py  runeclaw_eval_dashboard.html  setup_linux.sh  setup_windows.bat  train_local.py  train_local_8b.py  train_max_8b.py
scripts/: ab_cross_asset_vote.py  ab_cross_venue_vote.py  backup_data.sh  ci_test_gate.py  demo_director_package.md  llm_ab.py  (+10 more)
(+1179 files in other folders)
